--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
             width: 100%;
             height: 100px;
         }
+        img {
+            max-width: 100%; /* Ограничиваем ширину изображения */
+            height: auto; /* Сохраняем пропорции */
+        }
     </style>
 </head>
 <body>
