--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
             width: 100%;
             height: 100px;
         }
+	    img {
+             max-width: 100%; /* Ограничиваем ширину изображения */
+             height: auto; /* Сохраняем пропорции */
         button {
             background-color: #28a745; /* Зеленый цвет фона */
             color: white; /* Белый цвет текста */
