--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Чат с голосовыми сообщениями</title>
+    <style>
+          body {
+              font-family: Arial, sans-serif;
+              background-color: #f4f4f4;
+              color: #333;
+          }
+          #chatPanel {
+              display: none;
+          }
+          textarea {
+              width: 100%;
+              height: 100px;
+          }
+          img {
+              max-width: 100%; /* Ограничиваем ширину изображения */
+              height: auto; /* Сохраняем пропорции */
+          }
+    </style>
 </head>
 <body>
 
