--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title>Чат с голосовыми сообщениями</title>
     <style>
           body {
-              font-family: Arial, sans-serif;
               background-color: #f4f4f4;
               color: #333;
           }
@@ -22,6 +21,8 @@
               height: auto; /* Сохраняем пропорции */
           }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
 
